# CosyVoice

./: .gitmodules  pyproject.toml
